// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Navbar and secondary navbar navbar with page nav button 1`] = `
<div>
  <nav
    class="navbar navbar-expand-md navbar-dark bg-primary"
  >
    <div
      class="container-fluid"
    >
      <div
        class="navbar-brand"
      />
       
      <button
        aria-expanded="false"
        aria-label="Toggle navigation"
        class="navbar-toggler"
        type="button"
      >
        <span
          class="navbar-toggler-icon"
        />
         
      </button>
       
      <div
        class="navbar-collapse collapse"
      >
        <ul
          class="navbar-nav mr-auto mt-2 mt-lg-0"
        >
          <a
            class="navbar-brand current"
            href="#"
            slot="brand"
            title="Home"
          >
            Your Logo
          </a>
           
          <li>
            <a
              class="nav-link"
              href="#"
            >
              Topic 1
            </a>
          </li>
           
          <li>
            <a
              class="nav-link"
              href="#"
            >
              Topic 2
            </a>
          </li>
        </ul>
         
        <!---->
      </div>
    </div>
  </nav>
   
  <div
    class="lower-navbar-container"
    style="display: none;"
  >
    <div
      class="nav-menu-container"
    >
      <!---->
    </div>
  </div>
</div>
`;

exports[`Navbar and secondary navbar navbar with site and page nav buttons 1`] = `
<div>
  <nav
    class="navbar navbar-expand-md navbar-dark bg-primary"
  >
    <div
      class="container-fluid"
    >
      <div
        class="navbar-brand"
      />
       
      <button
        aria-expanded="false"
        aria-label="Toggle navigation"
        class="navbar-toggler"
        type="button"
      >
        <span
          class="navbar-toggler-icon"
        />
         
      </button>
       
      <div
        class="navbar-collapse collapse"
      >
        <ul
          class="navbar-nav mr-auto mt-2 mt-lg-0"
        >
          <a
            class="navbar-brand current"
            href="#"
            slot="brand"
            title="Home"
          >
            Your Logo
          </a>
           
          <li>
            <a
              class="nav-link"
              href="#"
            >
              Topic 1
            </a>
          </li>
           
          <li>
            <a
              class="nav-link"
              href="#"
            >
              Topic 2
            </a>
          </li>
        </ul>
         
        <!---->
      </div>
    </div>
  </nav>
   
  <div
    class="lower-navbar-container"
    style="display: none;"
  >
    <div
      class="nav-menu-container"
    >
      <!---->
       
      <!---->
    </div>
  </div>
</div>
`;

exports[`Navbar and secondary navbar navbar with site nav button 1`] = `
<div>
  <nav
    class="navbar navbar-expand-md navbar-dark bg-primary"
  >
    <div
      class="container-fluid"
    >
      <div
        class="navbar-brand"
      />
       
      <button
        aria-expanded="false"
        aria-label="Toggle navigation"
        class="navbar-toggler"
        type="button"
      >
        <span
          class="navbar-toggler-icon"
        />
         
      </button>
       
      <div
        class="navbar-collapse collapse"
      >
        <ul
          class="navbar-nav mr-auto mt-2 mt-lg-0"
        >
          <a
            class="navbar-brand current"
            href="#"
            slot="brand"
            title="Home"
          >
            Your Logo
          </a>
           
          <li>
            <a
              class="nav-link"
              href="#"
            >
              Topic 1
            </a>
          </li>
           
          <li>
            <a
              class="nav-link"
              href="#"
            >
              Topic 2
            </a>
          </li>
        </ul>
         
        <!---->
      </div>
    </div>
  </nav>
   
  <div
    class="lower-navbar-container"
    style="display: none;"
  >
    <div
      class="nav-menu-container"
    >
      <!---->
    </div>
  </div>
</div>
`;

exports[`Navbar and secondary navbar navbar without site and page nav buttons 1`] = `
<div>
  <nav
    class="navbar navbar-expand-md navbar-dark bg-primary"
  >
    <div
      class="container-fluid"
    >
      <div
        class="navbar-brand"
      />
       
      <button
        aria-expanded="false"
        aria-label="Toggle navigation"
        class="navbar-toggler"
        type="button"
      >
        <span
          class="navbar-toggler-icon"
        />
         
      </button>
       
      <div
        class="navbar-collapse collapse"
      >
        <ul
          class="navbar-nav mr-auto mt-2 mt-lg-0"
        >
          <a
            class="navbar-brand current"
            href="#"
            slot="brand"
            title="Home"
          >
            Your Logo
          </a>
           
          <li>
            <a
              class="nav-link"
              href="#"
            >
              Topic 1
            </a>
          </li>
           
          <li>
            <a
              class="nav-link"
              href="#"
            >
              Topic 2
            </a>
          </li>
        </ul>
         
        <!---->
      </div>
    </div>
  </nav>
   
  <div
    class="lower-navbar-container"
    style="display: none;"
  >
    <div />
  </div>
</div>
`;
